<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_animation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yu.animationandanimator.AnimatorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/id_btn_ViewPropertyAnimator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onViewPropertyAnimator"
            android:text="@string/ViewPropertyAnimator"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/id_btn_ObjectAnimator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onObjectAnimator"
            android:text="@string/objectanimator"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/id_btn_ValueAnimator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onValueAnimator"
            android:text="@string/valueanimator"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/id_btn_PropertyValuesHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onPropertyValuesHolder"
            android:text="@string/propertyvaluesholder"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/id_btn_AnimatorSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAnimatorSet"
            android:text="@string/AnimatorSet"
            android:textAllCaps="false" />
    </LinearLayout>

    <ImageView
        android:id="@+id/id_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp"
        android:src="@mipmap/ic_launcher" />
</RelativeLayout>
